# Pattern-Aggregation

./: README.md
plan_generator/: README.md  event_sourced_network.py  push_pull_aggregation_plan_generator.py
prototype/example/: README.md  generate_configs.py  run_nodes.sh  sender.py  sequence_accumulator_fat
prototype/example/plans/: config_0.json  config_1.json  config_2.json  config_3.json  config_4.json
prototype/example/traces/: trace_0.csv  trace_1.csv  trace_2.csv  trace_3.csv  trace_4.csv
prototype/sequence_aggregator/: CMakeLists.txt  README.md
prototype/sequence_aggregator/src/: event.hpp  sequence_accumulator.cpp
